moved files to sub-folders

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-lib/3d/*
-!lib/3d/3rd_party_3d.txt
-lib/footprints/*
-!lib/footprints/3rd_party_footprints.txt
+pcb/lib/3d/**
+!pcb/lib/3d/3rd_party_3d.txt
+pcb/lib/footprints/**
+!pcb/lib/footprints/3rd_party_footprints.txt
 scd30_esp.step
 *.lck
 *_autosave*
