--- a/esphome/airee.yaml
+++ b/esphome/airee.yaml
@@ -1,5 +1,5 @@
 substitutions:
-  name: "Airee"
+  name: "airee"
   friendly_name: "Airee"
 
 # Enable logging
@@ -247,12 +247,16 @@ esp32:
   framework:
     type: arduino
 
+dashboard_import:
+  package_import_url: github://Duckle29/SCD30_ESP/esphome/airee.yaml@v0.0.0
+  import_full_config: false
+
 esphome:
   name: "${name}"
   friendly_name: "${friendly_name}"
   name_add_mac_suffix: true
 
-  min_version: 2025.02.0
+  #min_version: 2025.02.0
 
   project:
     name: "duckle29.airee"
