--- a/esphome/inkli.yaml
+++ b/esphome/inkli.yaml
@@ -67,7 +67,7 @@ sensor:
     temperature_offset: 2
     co2:
       id: scd30_co2
-      name: "${friendly_name} co2"
+      name: "co2"
       accuracy_decimals: 0
       internal: False
       on_value_range:
@@ -82,11 +82,11 @@ sensor:
 
     temperature:
       id: scd30_t
-      name: "${friendly_name} temp"
+      name: "temperature"
       accuracy_decimals: 2
       internal: False
     humidity:
-      name: "${friendly_name} rh"
+      name: "humidity"
       id: scd30_rh
       accuracy_decimals: 2
       internal: False
@@ -110,7 +110,39 @@ external_components:
   - source: github://pr#8112
     components:
       - graph
-    refresh: 1s
+    #refresh: 1s
+
+# Example on how to implement a UI section in HA for manual calibration.
+# Note: Please enter first a CO2 value before pressing the button.
+button:
+  - platform: factory_reset
+    name: Restart with Factory Default Settings
+    
+  - platform: template
+    name: "CO2 sensor force manual calibration"
+    entity_category: "config"
+    on_press:
+      then:
+        - scd30.force_recalibration_with_reference:
+            value: !lambda 'return id(co2_cal).state;'
+
+number:
+  - platform: template
+    name: "CO2 manual calibration value"
+    optimistic: true
+    min_value: 350
+    max_value: 4500
+    initial_value: 400
+    step: 1
+    id: co2_cal
+    icon: "mdi:molecule-co2"
+    entity_category: "config"
+
+output:
+  - platform: ledc
+    id: led_status
+    pin: GPIO2
+    frequency: 50000
 
 graph:
   - id: co2_graph
@@ -160,32 +192,6 @@ graph:
         line_type: SOLID
         line_thickness: 2
         continuous: True
-
-# Example on how to implement a UI section in HA for manual calibration.
-# Note: Please enter first a CO2 value before pressing the button.
-button:
-  - platform: factory_reset
-    name: Restart with Factory Default Settings
-    
-  - platform: template
-    name: "CO2 sensor force manual calibration"
-    entity_category: "config"
-    on_press:
-      then:
-        - scd30.force_recalibration_with_reference:
-            value: !lambda 'return id(co2_cal).state;'
-
-number:
-  - platform: template
-    name: "CO2 manual calibration value"
-    optimistic: true
-    min_value: 350
-    max_value: 4500
-    initial_value: 400
-    step: 1
-    id: co2_cal
-    icon: "mdi:molecule-co2"
-    entity_category: "config"
 
 font:
   # gfonts://family[@weight]
@@ -251,12 +257,6 @@ font:
     id: mono_smol
     size: 13
 
-output:
-  - platform: ledc
-    id: led_status
-    pin: GPIO2
-    frequency: 50000
-
 display:
   - platform: waveshare_epaper
     id: disp
@@ -289,17 +289,15 @@ display:
           }
       - id: page_co2_graph 
         lambda: |-
-          int disp_height = 122;
-          
           it.printf(10, 0, id(literata_b), "\ue1ff%.1f°C", id(scd30_t).state);
           it.printf(it.get_width() -10, 0, id(literata_b), TextAlign::RIGHT, "\uf87e%.1f%%", id(scd30_rh).state);
           it.printf(it.get_width()/2, 30, id(literata_med_b), TextAlign::CENTER_HORIZONTAL, "%.0fppm", id(scd30_co2).state);
           
-          int y_grid = 250;
-          int graph_width = 215;
-          int graph_height = 61; // display-height/2
-          int graph_start_x = it.get_width() - graph_width; // Right adjust graph
-          int graph_start_y = disp_height - graph_height; // Bottom adjust graph
+          const int y_grid = 250;
+          const int graph_width = 215;
+          const int graph_height = it.get_height()/2;
+          const int graph_start_x = it.get_width() - graph_width; // Right adjust graph
+          const int graph_start_y = it.get_height() - graph_height; // Bottom adjust graph
 
           // Generate y-axis labels
           float graph_lim = id(co2_graph).get_graph_limit_max();
@@ -316,8 +314,6 @@ display:
 
       - id: page_t_graph
         lambda: |-
-          int disp_height = 122;
-          
           it.printf(10, 0, id(literata_b), "\ue7b0%.0f", id(scd30_co2).state);
           if( id(scd30_co2).state < 1000 )
           {
@@ -330,11 +326,11 @@ display:
           it.printf(it.get_width() -10, 0, id(literata_b), TextAlign::RIGHT, "\uf87e%.1f%%", id(scd30_rh).state);
           it.printf(it.get_width()/2, 30, id(literata_med_b), TextAlign::CENTER_HORIZONTAL, "\ue1ff%.1f°C", id(scd30_t).state);
           
-          int y_grid = 250;
-          int graph_width = 215;
-          int graph_height = 61; // display-height/2
-          int graph_start_x = it.get_width() - graph_width; // Right adjust graph
-          int graph_start_y = disp_height - graph_height; // Bottom adjust graph
+          const int y_grid = 250;
+          const int graph_width = 215;
+          const int graph_height = it.get_height()/2;
+          const int graph_start_x = it.get_width() - graph_width; // Right adjust graph
+          const int graph_start_y = it.get_height() - graph_height; // Bottom adjust graph
 
           // Generate y-axis labels
           float graph_lim = id(temp_graph).get_graph_limit_max();
@@ -351,18 +347,16 @@ display:
 
       - id: page_rh_graph
         lambda: |-
-          int disp_height = 122;
-
           it.printf(10, 0, id(literata_b), "\ue1ff%.1f°C", id(scd30_t).state);
           it.printf(it.get_width() -2, 0, id(literata_med_b), TextAlign::RIGHT, "ppm");
           it.printf(it.get_width() -50, 0, id(literata_b), TextAlign::RIGHT, "\ue7b0%.0f", id(scd30_co2).state);
           it.printf(it.get_width()/2, 30, id(literata_med_b), TextAlign::CENTER_HORIZONTAL, "\uf87e%.1f%%", id(scd30_rh).state);
           
-          int y_grid = 250;
-          int graph_width = 215;
-          int graph_height = 61; // display-height/2
-          int graph_start_x = it.get_width() - graph_width; // Right adjust graph
-          int graph_start_y = disp_height - graph_height; // Bottom adjust graph
+          const int y_grid = 250;
+          const int graph_width = 215;
+          const int graph_height = it.get_height()/2;
+          const int graph_start_x = it.get_width() - graph_width; // Right adjust graph
+          const int graph_start_y = it.get_height() - graph_height; // Bottom adjust graph
 
           // Generate y-axis labels
           float graph_lim = id(humi_graph).get_graph_limit_max();
@@ -403,6 +397,8 @@ display:
         - lambda: "id(disp).set_full_update_every(60);" # Will apply on AFTER next update
         - component.update: disp # A full update
 
+## Board and project config
+
 esp32:
   board: widora-air
   flash_size: 16MB
@@ -410,7 +406,7 @@ esp32:
     type: esp-idf
 
 dashboard_import:
-  package_import_url: github://Duckle29/SCD30_ESP/esphome/inkli.yaml@v0.0.0
+  package_import_url: github://Duckle29/SCD30_ESP/esphome/inkli.yaml@v0.0.1
   import_full_config: false
 
 esphome:
@@ -418,11 +414,11 @@ esphome:
   friendly_name: "${friendly_name}"
   name_add_mac_suffix: true
 
-  #min_version: 2025.02.0
+  min_version: 2025.02.0
 
   project:
     name: "duckle29.inkli"
-    version: "0.0.0"
+    version: "0.0.1"
 
   on_boot:
     - priority: 900
@@ -526,9 +522,11 @@ improv_serial:
 
 # Enable Home Assistant API
 api:
+  reboot_timeout: 0s
 
 wifi:
   id: wifi_id
   on_connect:
     - display.page.show: page_co2_graph
   ap:
+  reboot_timeout: 0s
