--- a/.github/workflows/publish-firmware.yml
+++ b/.github/workflows/publish-firmware.yml
@@ -15,7 +15,7 @@ jobs:
     with:
       files: |
         esphome/inkli.yaml
-      esphome-version: 2025.02.0
+      esphome-version: latest
 
       release-summary: ${{ github.event.release.body }}
       release-url: ${{ github.event.release.html_url }}
