Upload files to proper subdir

--- a/.github/workflows/publish-firmware.yml
+++ b/.github/workflows/publish-firmware.yml
@@ -54,4 +54,4 @@ jobs:
           cd files
           curl -O https://github.com/Duckle29/InKli/releases/latest/download/inkli-esp32.ota.bin
           curl -O https://github.com/Duckle29/InKli/releases/latest/download/inkli-esp32.ota.bin.md5
-          scp ./* otaserv@otaserv.mikkel.cc:~/
+          scp ./* otaserv@otaserv.mikkel.cc:/inkli/
