--- a/esphome/inkli.yaml
+++ b/esphome/inkli.yaml
@@ -44,8 +44,8 @@ binary_sensor:
           - component.update: disp
           - delay: 1s
           - ota.http_request.flash:
-              md5_url: https://paste.mikkel.cc/GzvK7Dyr/+inline
-              url: https://paste.mikkel.cc/CnemcyFY/+inline
+              md5_url: https://otaserv.mikkel.cc/inkli/inkli-esp32.ota.bin.md5
+              url: https://otaserv.mikkel.cc/inkli/inkli-esp32.ota.bin
 
   - platform: esp32_touch
     pin: GPIO33
@@ -417,7 +417,7 @@ esp32:
     type: esp-idf
 
 dashboard_import:
-  package_import_url: github://Duckle29/SCD30_ESP/esphome/inkli.yaml@v0.0.7
+  package_import_url: github://Duckle29/SCD30_ESP/esphome/inkli.yaml@v0.1.0
   import_full_config: false
 
 esphome:
@@ -429,7 +429,7 @@ esphome:
 
   project:
     name: "duckle29.inkli"
-    version: "0.0.7"
+    version: "0.1.0"
 
   on_boot:
     - priority: 900
