--- a/esphome/inkli.yaml
+++ b/esphome/inkli.yaml
@@ -45,7 +45,7 @@ binary_sensor:
                   - display.is_displaying_page: ap_info
               then:
                 - wifi.enable:
-                - delay: 5min
+                # TODO: non-blocking delay - delay: 5min
                 - if:
                     condition:
                       wifi.connected:
